fix(wizard): fix alignment of dropdown and input
fix the alignment of the dropdown and input boxes after style updates

--- a/src/app/space-wizard/components/app-generator-single-selection-dropdown/app-generator-single-selection-dropdown.component.less
+++ b/src/app/space-wizard/components/app-generator-single-selection-dropdown/app-generator-single-selection-dropdown.component.less
@@ -5,6 +5,8 @@
   .combobox-container {
     input[type='text'] {
       &.combobox {
+        top: 0;
+        left: 0;
         background-color: @color-pf-white;
         color: inherit;
       }
